changed jump height, and fixed issue in html

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ p{
   background-color: blue;
   }
   .jump {
-    animation: jump 0.5s ease-in-out;
-    transform: translateY(-100%);
+    animation: jump 1s ease-in-out;
+    transform: translateY(0%);
   }
   
   @keyframes jump {
@@ -45,7 +45,7 @@ p{
       transform: translateY(0);
     }
     50% {
-      transform: translateY(-50%);
+      transform: translateY(-150%);
     }
     100% {
       transform: translateY(0);
